# accounts_demo

./: .gitignore  Cargo.toml  Readme.md
crates/accounts/: Cargo.toml
crates/accounts/src/: broadcast.rs  lib.rs  quicktest_utils.rs
crates/accounts/src/actors/: account.rs  account_manager.rs  account_shard.rs  mod.rs
crates/accounts/src/actors/aggregators/: accounts_state_aggregator.rs  mod.rs
crates/accounts/src/domain/: account.rs  events.rs  mod.rs  money.rs
crates/cli/: Cargo.toml
crates/cli/src/: csv.rs  main.rs
tests/: simple.csv
